--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "electronmon",
   "main": "index.js",
+  "bin": {
+    "electronmon": "./bin/cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +23,6 @@
     "node": ">=8.0.0"
   },
   "devDependencies": {
-    "electron": "^4.0.5",
     "eslint": "^5.14.1"
   },
   "dependencies": {
