adding better logging

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^5.14.1"
   },
   "dependencies": {
+    "chalk": "^2.4.2",
     "chokidar": "^2.1.2",
     "import-from": "^2.1.0",
     "yargs-parser": "^13.0.0"
