--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "electronmon": "./bin/cli.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cilint": "npm install && npm -s lint",
+    "lint": "eslint bin src"
   },
   "repository": {
     "type": "git",
