--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chalk": "^2.4.2",
     "chokidar": "^2.1.2",
     "import-from": "^2.1.0",
+    "runtime-required": "^1.0.0",
     "yargs-parser": "^13.0.0"
   }
 }
