--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
 os:
-  - linux
+  - osx
 
 language: node_js
 
 node_js:
   - '10'
 
-addons:
-  apt:
-    packages:
-      - xvfb
+#addons:
+#  apt:
+#    packages:
+#      - xvfb
 
 install:
-  - export DISPLAY=':99.0'
-  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+#  - export DISPLAY=':99.0'
+#  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
   - npm ci
 
 script:
