--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "chalk": "^2.4.2",
     "chokidar": "^2.1.2",
     "import-from": "^2.1.0",
-    "runtime-required": "^1.0.1",
-    "yargs-parser": "^13.0.0"
+    "runtime-required": "^1.0.1"
   },
   "keywords": [
     "electron",
