updating scripts to use xvfb-maybe instead of manually testing for stuff

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,8 @@ addons:
       - xvfb
 
 install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=':99.0'                            ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 & ; fi
   - npm ci
 
 script:
   - npm run lint
-  - npm test
+  - npm run citest
