--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ version: '{branch} #{build}'
 environment:
   matrix:
     - nodejs_version: "10"
+    - nodejs_version: "8"
 
 # Install scripts. (runs after repo cloning)
 install:
