--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ version: '{branch} #{build}'
 
 environment:
   matrix:
+    - nodejs_version: "12"
     - nodejs_version: "10"
     - nodejs_version: "8"
 
