--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 version: '{branch} #{build}'
 
+platform: x64
+
 environment:
   matrix:
     - nodejs_version: "12"
@@ -8,7 +10,7 @@ environment:
 
 # Install scripts. (runs after repo cloning)
 install:
-  - ps: Install-Product node $env:nodejs_version
+  - ps: Install-Product node $env:nodejs_version $env:platform
   # Output useful info for debugging.
   - node --version
   - npm --version
