--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ platform: x64
 
 environment:
   matrix:
-    - nodejs_version: "12"
+#    - nodejs_version: "12"
     - nodejs_version: "10"
     - nodejs_version: "8"
 
