fixing installing of custom electron

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ addons:
 
 install:
   - npm ci
-  - npm install --dev electron@$ELECTRON
+  - npm install --save-dev electron@$ELECTRON
   - ./node_modules/.bin/electron --version
 
 script:
