--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "lint": "eslint bin src",
     "test": "mocha --timeout 10000",
+    "ciinspect": "xvfb-maybe electron --version",
     "citest": "xvfb-maybe npm test",
     "fixture": "node bin/cli.js fixtures/main.js"
   },
