adding electron-rebuild

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "mocha --timeout 10000",
     "ciinspect": "xvfb-maybe electron --version",
     "citest": "xvfb-maybe npm test",
-    "fixture": "node bin/cli.js fixtures/main.js"
+    "fixture": "node bin/cli.js fixtures/main.js",
+    "postinstall": "electron-rebuild"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "electron": "^4.0.8",
+    "electron-rebuild": "^1.8.4",
     "eslint": "^5.16.0",
     "mocha": "^6.1.4",
     "node-stream": "^1.7.0",
