--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,14 +4,14 @@ platform: x64
 
 environment:
   matrix:
-#    - nodejs_version: "12"
+    - nodejs_version: "12"
+      ELECTRON: "6"
     - nodejs_version: "10"
       ELECTRON: "5"
     - nodejs_version: "10"
       ELECTRON: "4"
     - nodejs_version: "8"
       ELECTRON: "3"
-
 
 # Install scripts. (runs after repo cloning)
 install:
