--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ jobs:
       node_js: '12'
       env: ELECTRON=6
     - stage: npm test
+      os: osx
+      node_js: '12'
+      env: ELECTRON=7
+    - stage: npm test
       os: linux
       node_js: '12'
       env: ELECTRON=5
@@ -28,6 +32,10 @@ jobs:
       os: osx
       node_js: '12'
       env: ELECTRON=4
+    - stage: npm test
+      os: linux
+      node_js: '10'
+      env: ELECTRON=7
     - stage: npm test
       os: linux
       node_js: '10'
