--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,8 +5,10 @@ platform: x64
 environment:
   matrix:
     - nodejs_version: "12"
-      ELECTRON: "7"
+      ELECTRON: "8"
     - nodejs_version: "12"
+      ELECTRON: "7"
+    - nodejs_version: "10"
       ELECTRON: "6"
     - nodejs_version: "10"
       ELECTRON: "5"
