--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ jobs:
       node_js: '8'
       env: ELECTRON=7
     - stage: npm test
-      os: osx
+      os: linux
       node_js: '14'
       env: ELECTRON=9
     - stage: npm release
