--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [test, lint]
     if: startsWith(github.ref, 'refs/tags/') && github.event_name != 'pull_request'
     steps:
       - uses: actions/checkout@v2
