--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,18 +13,24 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        node: [14, 16, 18]
-        electron: [11]
+        node: [16, 18]
+        electron: [23, 20]
         include:
           - os: ubuntu-latest
+            node: 14
+            electron: 18
+          - os: ubuntu-latest
+            node: 14
+            electron: 16
+          - os: windows-latest
+            node: 14
+            electron: 14
+          - os: macos-latest
+            node: 14
+            electron: 12
+          - os: windows-latest
             node: 12
             electron: 10
-          - os: macos-latest
-            node: 12
-            electron: 9
-          - os: windows-latest
-            node: 10
-            electron: 9
           - os: macos-latest
             node: 10
             electron: 8
