the github action one hides logs from retries, this one seems to work better

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,11 +48,7 @@ jobs:
       - run: node --version
       - run: npx electron --version
       - name: npm test
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 5
-          max_attempts: 3
-          command: npx xvfb-maybe npm test
+        run: npx xvfb-maybe npx retry-cli -n 3 -- npm test
 
   lint:
     runs-on: ubuntu-latest
