--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       - run: npm install
       - run: npm install electron@${{ matrix.electron }}
       - run: node --version
-      - run: npx electron --version
+      - run: npx electron --version || echo well that went poorly
       - name: npm test
         run: npm run citest
 
