ignoring node 20 on ubuntu
retry-cli has an issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,10 @@ jobs:
         os: [macos-latest, windows-latest, ubuntu-latest]
         node: [20, 18]
         electron: [30, 28, 23]
+        exclude:
+          # there's an issue with signals in retry-cli on linux in node 20 🤷‍♀️
+          - os: ubuntu-latest
+            node: 20
         include:
           - os: ubuntu-latest
             node: 16
