--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,19 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        node: [20, 18]
-        electron: [30, 28, 23]
+        node: [22, 20]
+        electron: [34, 32, 30]
         exclude:
           # there's an issue with signals in retry-cli on linux in node 20 🤷‍♀️
           - os: ubuntu-latest
             node: 20
         include:
+          - os: windows-latest
+            electron: 28
+            node: 18
+          - os: ubuntu-latest
+            node: 18
+            electron: 23
           - os: ubuntu-latest
             node: 16
             electron: 20
